feat: Add WebUtils for client IP retrieval
feat: Add task type column to tasks table

fix: Update TaskControllerTest to use reporter instead of creator

fix: Update ProjectControllerIntegrationTest to use List.of for roles

fix: Update TaskControllerIntegrationTest to use reporter instead of creator

test: Implement LoginServiceTest for authentication logic

test: Create MockBackupCodeService for testing backup codes

test: Create MockTotpService for testing TOTP functionality

test: Refactor TwoFactorAuthServiceTest to use mock services

fix: Update ProjectServiceTest to use Collections.singletonList for roles

fix: Update TaskServiceTest to use reporter instead of creator

chore: Update class diagram title and add new diagram image